<resources>
    <string name="app_name">RotraConversation</string>
    <string name="need_new_account">Need New Account ?</string>
    <string name="r_i_district_no_or_voter_id"> R.I. Dist. No / Voter ID / Citizenship ID</string>
    <string name="password"> Password</string>
    <string name="registration"><u>Registration</u></string>
    <string name="display_name"> Display Name</string>
    <string name="email"> Email</string>
    <string name="create_account">Create Account</string>
    <string name="log_out">Log Out</string>
    <string name="create_new_account">Create New Account</string>
    <string name="already_have_account"><u>Already Have Account</u></string>
    <string name="login_your_account">Login Your Account</string>
    <string name="log_in">Log In</string>
    <string name="account_setting">Account Setting</string>
    <string name="default_status">Rotra Conversation App</string>
    <string name="change_an_image">Change an Image</string>
    <string name="type_your_status">Type your status</string>
    <string name="update_status">Update Status</string>
    <string name="all_users">All users</string>
    <string name="current_user_status">Current User Status</string>
    <string name="total_friends">Total Friends</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="contact_no">Contact No</string>
    <string name="mutual_friends">Mutual Friends</string>
    <string name="friends">Friends</string>
    <string name="address">Address</string>
    <string name="change_information">Change Information</string>
    <string name="enter_your_address">Enter your Address</string>
    <string name="enter_your_contact_no">Enter your Contact no</string>
    <string name="enter_your_email_id">Enter your Email ID</string>
    <string name="update_information">Update Information</string>
    <string name="type_your_address">Type your Address</string>
    <string name="update_address">Update Address</string>
    <string name="update_contact_no">Update Contact No</string>
    <string name="update_email_id">Update Email ID</string>
    <string name="note_guest_non_rotaractor_can_be_use_there_voter_id">Note : Guest non-rotaractor can be use there voter/citizenship ID</string>
    <string name="last_seen">Last Seen</string>
    <string name="type_your_message_here">Type your message here</string>
</resources>
