<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="4dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:padding="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">
            <include layout="@layout/app_bar_layout" android:id="@+id/register_toolbar"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colorAccent"
                android:text="@string/create_new_account"
                android:textStyle="bold"
                android:layout_margin="5dp"/>
            <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                android:id="@+id/reg_display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/display_name"
                android:maxLines="1"
                android:textStyle="bold"
                android:inputType="text"
                android:layout_marginLeft="5dp"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:met_baseColor="@color/colorPrimary"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary"
                app:met_singleLineEllipsis="true"/>
            <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                android:id="@+id/reg_ridno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/r_i_district_no_or_voter_id"
                android:layout_marginLeft="5dp"
                android:maxLines="1"
                android:textStyle="bold"
                android:inputType="number"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:met_baseColor="@color/colorPrimary"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary"
                app:met_singleLineEllipsis="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colorAccent"
                android:text="@string/note_guest_non_rotaractor_can_be_use_there_voter_id"
                android:textStyle="bold"
                android:layout_margin="5dp"/>
            <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/email"
                android:maxLines="1"
                android:textStyle="bold"
                android:inputType="textEmailAddress|textWebEmailAddress"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:met_baseColor="@color/colorPrimary"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary"
                app:met_singleLineEllipsis="true"/>
            <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/password"
                android:maxLines="1"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:met_baseColor="@color/colorPrimary"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary"
                app:met_singleLineEllipsis="true"/>
            <Button
                android:id="@+id/reg_create_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>

