<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rotaractnepalapp.rotraconversation.ProfileActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/colorPrimaryDark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_displayImage"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/default_avatar"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="1dp"/>
        <TextView
            android:id="@+id/profile_displayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/display_name"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/profile_ridno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_i_district_no"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/profile_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_user_status"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@android:color/white"/>
        <android.support.v7.widget.CardView
            android:layout_width="280dp"
            android:layout_height="65dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rectangle_broder">
            <TextView
                android:id="@+id/profile_totalFriends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_friends"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="@color/colorSecondaryText"/>
        </android.support.v7.widget.CardView>
        <Button
            android:id="@+id/sendRequest_btn"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:backgroundTint="#8bc34a"
            android:layout_marginTop="10dp"
            android:text="@string/send_friend_request"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold|italic"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/declineRequest_btn"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:backgroundTint="#f44336"
            android:layout_marginTop="10dp"
            android:text="@string/decline_friend_request"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold|italic"
            android:textSize="20sp"/>
    </LinearLayout>
</RelativeLayout>
