<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.rotaractnepalapp.rotraconversation.StartActivity"
    android:layout_margin="8dp"
    android:elevation="4dp"
    android:layout_gravity="center_vertical|center_horizontal"
    android:padding="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">
        <include layout="@layout/app_bar_layout" android:id="@+id/status_appBar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorAccent"
            android:text="@string/type_your_status"
            android:textStyle="bold"
            android:layout_margin="5dp"/>
        <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
            android:id="@+id/status_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/display_name"
            android:maxLines="1"
            android:maxLength="40"
            app:met_maxCharacters="40"
            android:textStyle="bold"
            android:inputType="text"
            android:layout_marginLeft="5dp"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true"/>
        <Button
            android:id="@+id/status_save_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_status"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
