<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/default_avatar"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorAccent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/user_single_image" />
    <ImageView
        android:id="@+id/user_single_online_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/online"
        android:layout_alignEnd="@id/user_single_image"
        android:layout_alignRight="@id/user_single_image"
        android:layout_marginTop="12dp"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/user_single_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/user_single_image"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_toEndOf="@+id/user_single_image"
        android:layout_toRightOf="@+id/user_single_image"
        android:text="@string/display_name"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/user_single_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_single_name"
        android:layout_alignStart="@id/user_single_name"
        android:layout_alignLeft="@id/user_single_name"
        android:text="@string/default_status"/>
    <TextView
        android:id="@+id/user_single_ridno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_single_status"
        android:layout_alignStart="@id/user_single_status"
        android:layout_alignLeft="@id/user_single_status"
        android:text="@string/r_i_district_no_or_voter_id"/>
    <View
        android:layout_below="@id/user_single_image"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider" />
</RelativeLayout>