<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rotaractnepalapp.rotraconversation.SettingsActivity"
    android:background="@color/colorPrimaryDark">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setting_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/default_avatar"
        android:tint="@android:color/white"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="2dp"
        app:civ_circle_background_color="@android:color/white"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>
    <ImageView
        android:id="@+id/setting_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/camera"
        android:layout_alignEnd="@id/setting_image"
        android:background="@android:color/transparent"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:layout_alignRight="@id/setting_image" />
    <TextView
        android:id="@+id/setting_display_name"
        android:layout_below="@id/setting_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:maxLines="1"
        android:maxLength="21"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:text="@string/display_name"/>
    <TextView
        android:id="@+id/setting_ridno"
        android:layout_below="@id/setting_display_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text="@string/r_i_district_no_or_voter_id"/>
    <TableLayout
        android:id="@+id/userStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_ridno"
        android:layout_centerHorizontal="true">
        <TableRow android:layout_marginTop="15dp">
            <ImageView
                android:id="@+id/setting_status_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/edittext"/>
            <TextView
                android:id="@+id/setting_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:maxLength="32"
                android:textStyle="normal"
                android:layout_marginLeft="5dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:text="@string/default_status"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:id="@+id/userInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userStatus"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true">
        <TableRow android:layout_marginTop="15dp">
            <ImageView
                android:id="@+id/setting_address_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/edittext"/>
            <ImageView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/address"/>
            <TextView
                android:id="@+id/userAddressDisplay"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@android:color/white"
                android:layout_gravity="center|left"
                android:layout_marginLeft="10dp"
                android:text="@string/address"/>
        </TableRow>
        <TableRow android:layout_marginTop="15dp">
            <ImageView
                android:id="@+id/setting_contactno_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/edittext"/>
            <ImageView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/contact"
                android:tint="@android:color/white"/>
            <TextView
                android:id="@+id/userContactDisplay"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center|left"
                android:text="@string/contact_no"/>
        </TableRow>
        <TableRow android:layout_marginTop="15dp">
            <ImageView
                android:id="@+id/setting_emailid_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/edittext"/>
            <ImageView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/email"
                android:tint="@android:color/white"/>
            <TextView
                android:id="@+id/userEmailIDDisplay"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center|left"
                android:text="@string/email"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>
