<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rotaractnepalapp.rotraconversation.StartActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="4dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">
            <include layout="@layout/app_bar_layout" android:id="@+id/information_appBar"/>
            <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                android:id="@+id/address_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_address"
                android:maxLength="20"
                app:met_maxCharacters="20"
                android:textStyle="bold"
                android:inputType="text"
                android:layout_marginLeft="5dp"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:met_baseColor="@color/colorPrimary"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary"
                app:met_singleLineEllipsis="true"
                android:layout_marginTop="5dp"/>
            <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                android:id="@+id/contactno_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_contact_no"
                android:maxLength="10"
                app:met_maxCharacters="10"
                android:textStyle="bold"
                android:inputType="number"
                android:layout_marginLeft="5dp"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:met_baseColor="@color/colorPrimary"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary"
                app:met_singleLineEllipsis="true"
                android:layout_marginTop="5dp"/>
            <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                android:id="@+id/emailid_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email_id"
                android:maxLength="30"
                app:met_maxCharacters="30"
                android:textStyle="bold"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="5dp"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:met_baseColor="@color/colorPrimary"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary"
                app:met_singleLineEllipsis="true"
                android:layout_marginTop="5dp"/>
            <Button
                android:id="@+id/information_save_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_information"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>

